Исправление ДЗ №1 + ДЗ №2

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -7,3 +7,33 @@
 	font-style: normal;
 	font-display: swap;
 }
+
+@font-face {
+	font-family: "RobotoLight";
+	src: local("RobotoLight"),
+		url("~@/assets/fonts/robotolight.woff2") format("woff2"),
+		url("~@/assets/fonts/robotolight.woff") format("woff");
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Inter";
+	src: local("Inter"),
+		url("~@/assets/fonts/interregular.woff2") format("woff2"),
+		url("~@/assets/fonts/interregular.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Open Sans";
+	src: local("Open Sans"),
+		url("~@/assets/fonts/opensansregular.woff2") format("woff2"),
+		url("~@/assets/fonts/opensansregular.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
