--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -20,10 +20,19 @@
 		box-shadow: inset 0px 0px 1px 1px rgba($disabled, 0.5);
 	}
 
-	&:focus {
-		border: 1px solid $primary;
-		box-shadow: 0px 0px 2px 2px rgba($primary, 0.5);
+	&:not(:placeholder-shown).form-input-error{
+		border: 1px solid $error;
 	}
+
+	&:focus.form-input-error {
+		border: 1px solid $error;
+		box-shadow: 0px 0px 2px 2px rgba($error, 0.5);
+	}
+
+		&:focus {
+			border: 1px solid $primary;
+			box-shadow: 0px 0px 2px 2px rgba($primary, 0.5);
+		}
 
 	&:disabled {
 		background-color: $inner-shadow;
